WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11772
REGRESSION: XMLSerializer.serializeToString incorrect value for CDATA nodes
https://bugs.webkit.org/show_bug.cgi?id=11772
Summary
REGRESSION: XMLSerializer.serializeToString incorrect value for CDATA nodes
Jesse Costello-Good
Reported
2006-12-06 17:15:32 PST
var d = window.document.implementation.createDocument("", "", null); var n = d.createCDATASection("-- cdata --"); var s = (new XMLSerializer()).serializeToString(n) assertEquals("<![CDATA[-- cdata --]]>", s); // in current WebKit build s is equal to ""
Attachments
naive fix
(3.56 KB, patch)
2006-12-07 11:21 PST
,
Alexey Proskuryakov
timothy
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2006-12-06 21:47:26 PST
Confirmed as a regression.
Alexey Proskuryakov
Comment 2
2006-12-07 10:39:36 PST
This has regressed more than once already - with
r12009
(January 2006), the result was "<#cdata-section/>".
Alexey Proskuryakov
Comment 3
2006-12-07 11:21:05 PST
Created
attachment 11764
[details]
naive fix
Alexey Proskuryakov
Comment 4
2006-12-08 10:16:03 PST
Committed revision 18076.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug