        Reviewed by Tim H.

http://bugs.webkit.org/show_bug.cgi?id=11772
        REGRESSION: XMLSerializer.serializeToString incorrect value for CDATA nodes

        Test: fast/dom/serialize-cdata.html

        * editing/markup.cpp:
        (WebCore::startMarkup): Dump CDATA sections, too.



Canonical link: https://commits.webkit.org/15165@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18076 268f45cc-cd09-0410-ab3c-d52691b4dbfc